force-app/main/default/objects/Election__c/fields/BackgroundImageUrl__c.field-meta.xml
<CustomField>
    <fullName>BackgroundImageUrl__c</fullName>
    <label>Background Image Url</label>
    <type>Url</type>
</CustomField>