force-app/main/default/objects/Election__c/fields/MaximumChoicesAllowed__c.field-meta.xml
<CustomField>
    <fullName>MaximumChoicesAllowed__c</fullName>
    <label>Maximum Choices Allowed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>