force-app/main/default/objects/Election__c/fields/MinimumChoicesAllowed__c.field-meta.xml
<CustomField>
    <fullName>MinimumChoicesAllowed__c</fullName>
    <label>Minimum Choices Allowed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>