force-app/main/default/objects/Election__c/fields/MultipleChoicesAllowed__c.field-meta.xml
<CustomField>
    <fullName>MultipleChoicesAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple Choices Allowed</label>
    <type>Checkbox</type>
</CustomField>