force-app/main/default/objects/Election__c/fields/RegistrationEndDate__c.field-meta.xml
<CustomField>
    <fullName>RegistrationEndDate__c</fullName>
    <label>Registration End Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>