force-app/main/default/objects/Election__c/fields/RegistrationStartDate__c.field-meta.xml
<CustomField>
    <fullName>RegistrationStartDate__c</fullName>
    <label>Registration Start Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>