force-app/main/default/objects/Election__c/fields/ShortDescription__c.field-meta.xml
<CustomField>
    <fullName>ShortDescription__c</fullName>
    <label>Short Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>