force-app/main/default/objects/Election__c/fields/VotingEndDate__c.field-meta.xml
<CustomField>
    <fullName>VotingEndDate__c</fullName>
    <label>Voting End Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>