force-app/main/default/objects/Election__c/fields/VotingStartDate__c.field-meta.xml
<CustomField>
    <fullName>VotingStartDate__c</fullName>
    <label>Voting Start Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>